--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -292,7 +292,7 @@
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
                         <i class="fas fa-map-marker-alt fa-fw"></i>
-                        Racoon City
+                        123 Consectetur at ligula 10660
                     </li>
                     <li>
                         <i class="fa fa-phone fa-fw"></i>
@@ -352,11 +352,11 @@
                 </ul>
             </div>
             <div class="col-auto">
-                <label class="sr-only" for="subscribeEmail">Ingrese Email</label>
+                <label class="sr-only" for="subscribeEmail">Email address</label>
                 <div class="input-group mb-2">
                     <input class="form-control bg-dark border-light" id="subscribeEmail" placeholder="Email address"
                            type="text">
-                    <div class="input-group-text btn-success text-light">Suscribete</div>
+                    <div class="input-group-text btn-success text-light">Subscribe</div>
                 </div>
             </div>
         </div>
@@ -366,7 +366,7 @@
             <div class="row pt-2">
                 <div class="col-12">
                     <p class="text-left text-light">
-                        Copyright &copy; 2023 Juan Diego Sánchez
+                        Copyright &copy; 2021 Company Name
                         | Designed by <a href="https://templatemo.com" rel="sponsored" target="_blank">TemplateMo</a>
                     </p>
                 </div>
