--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -42,7 +42,7 @@
                             <a th:href="@{/user}">
                                 <div class="backgrounds justify-content-center">
                                     <h2>[[#{admin.usuarios}]]</h2>
-                                    <img th:src="@{/icons/icons8-product-management-96.png}"
+                                    <img th:src="@{/icons/user_456212.png}"
                                          alt="delivery-settings"/>
                                 </div>
                             </a>
