--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -72,13 +72,11 @@
                    href="#">
                     <i class="fa fa-fw fa-search text-dark mr-2"></i>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                <a class="nav-icon position-relative text-decoration-none" href="/login">
+                    <button type="button" class="btn btn-dark">[[#{inisec}]]</button>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                <a class="nav-icon position-relative text-decoration-none" href="/registro">
+                    <button type="button" class="btn btn-dark">[[#{regis}]]</button>
                 </a>
             </div>
         </div>
